--- a/templates/about.html
+++ b/templates/about.html
@@ -110,161 +110,72 @@
       </section>
 
 
-      <section id="non-profit-governance">
-        <div class="page-header">
-          <h1>Non-Profit Governance</h1>
-        </div>
-        <p class="lead">Bootstrap comes equipped with HTML, CSS, and JS for all sorts of things, but they can be summarized with a handful of categories visible at the top of the <a href="http://getbootstrap.com">Bootstrap documentation</a>.</p>
+        <section id="non-profit-governance">
+            <div class="page-header">
+                <h1>Non-Profit Governance</h1>
+            </div>
+            <div class="tabbable">
+                <ul class="nav nav-tabs">
+                    <li class="active"><a href="#home" data-toggle="tab">Overview</a></li>
+                    <li><a href="#docs-state" data-toggle="tab">State Filings</a></li>
+                    <li><a href="#docs-federal" data-toggle="tab">Federal Filings</a></li>
+                    <li><a href="#docs-internal" data-toggle="tab">Policies &amp; Bylaws</a></li>
+                </ul>
+                <div class="tab-content">
+                    <div class="tab-pane active" id="home">
+                        <p>At ClinDesk and White Coat Academy, we try to be as transparent as possible with our finances and governance
+                            (in the hopes that you'll <a href="donate.html">donate</a> to help keep us going!).</p>
+                        <p>You can see some of our documents listed in the above tabs. Over the next year, we'll expand these listings as we grow.</p>
+                        <p>Some documents &mdash; such as the IRS 990 &mdash; won't be available until the next fiscal year, since we're just geting off the ground.</p>
+                    </div>
+                    <div class="tab-pane" id="docs-state">
+                        We are a non-profit corporation, incorporated in the State of Missouri. You can access our corporate documents through the Secretary of State's <a href="http://www.sos.mo.gov/business/" target="_blank">Business Services</a> site.
+                        <br/><br/><ul><li><a href="https://www.sos.mo.gov/BusinessEntity/soskb/Corp.asp?3353789" target="_blank">ClinDesk Registration &amp; Filings</a> (Charter #N01234644)</li>
+                        <li><a href="https://www.sos.mo.gov/BusinessEntity/soskb/Corp.asp?3353954" target="_blank">White Coat Academy Name Registration</a> (Charter #X01234744)</li></ul>
+                    </div>
+                    <div class="tab-pane" id="docs-federal">Our federal filings for tax-exempt status are currently pending. We will update this site with documents when we know more!<br/><br/>
+                        If you need our EIN (or other data, such as our DUNS number), please e-mail us at <a href="mailto:legal@clindesk.org">legal@clindesk.org</a>.</div>
+                    <div class="tab-pane" id="docs-internal">We make an effort to publicize our bylaws, conflict of interest policy, and other documents regarding our corporate governance.
+                        <br/><br/><ul>
+                            <li>Corporate Bylaws (Coming soon)</li>
+                            <li>Conflict of Interest Policy (Coming soon)</li>
+                            <li>Copyright and Intellectual Property (Coming soon)</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-        <h2>Docs sections</h2>
-        <h4><a href="http://twitter.github.com/bootstrap/scaffolding.html">Scaffolding</a></h4>
-        <p>Global styles for the body to reset type and background, link styles, grid system, and two simple layouts.</p>
-        <h4><a href="http://twitter.github.com/bootstrap/base-css.html">Base CSS</a></h4>
-        <p>Styles for common HTML elements like typography, code, tables, forms, and buttons. Also includes <a href="http://glyphicons.com">Glyphicons</a>, a great little icon set.</p>
-        <h4><a href="http://twitter.github.com/bootstrap/components.html">Components</a></h4>
-        <p>Basic styles for common interface components like tabs and pills, navbar, alerts, page headers, and more.</p>
-        <h4><a href="http://twitter.github.com/bootstrap/javascript.html">JavaScript plugins</a></h4>
-        <p>Similar to Components, these JavaScript plugins are interactive components for things like tooltips, popovers, modals, and more.</p>
 
-        <h2>List of components</h2>
-        <p>Together, the <strong>Components</strong> and <strong>JavaScript plugins</strong> sections provide the following interface elements:</p>
-        <ul>
-          <li>Button groups</li>
-          <li>Button dropdowns</li>
-          <li>Navigational tabs, pills, and lists</li>
-          <li>Navbar</li>
-          <li>Labels</li>
-          <li>Badges</li>
-          <li>Page headers and hero unit</li>
-          <li>Thumbnails</li>
-          <li>Alerts</li>
-          <li>Progress bars</li>
-          <li>Modals</li>
-          <li>Dropdowns</li>
-          <li>Tooltips</li>
-          <li>Popovers</li>
-          <li>Accordion</li>
-          <li>Carousel</li>
-          <li>Typeahead</li>
-        </ul>
-        <p>In future guides, we may walk through these components individually in more detail. Until then, look for each of these in the documentation for information on how to utilize and customize them.</p>
-      </section>
-
-      <section id="contact-us">
-        <div class="page-header">
-          <h1>Contact Us</h1>
-        </div>
-        <p class="lead">With a brief intro into the contents out of the way, we can focus on putting Bootstrap to use. To do that, we'll utilize a basic HTML template that includes everything we mentioned in the <a href="#file-structure">File structure</a>.</p>
-        <p>Now, here's a look at a <strong>typical HTML file</strong>:</p>
-<pre class="prettyprint linenums">
-&lt;!DOCTYPE html&gt;
-&lt;html&gt;
-&lt;head&gt;
-  &lt;title&gt;Bootstrap 101 Template&lt;/title&gt;
-&lt;/head&gt;
-&lt;body&gt;
-  &lt;h1&gt;Hello, world!&lt;/h1&gt;
-  &lt;script src="http://code.jquery.com/jquery-latest.js"&gt;&lt;/script&gt;
-&lt;/body&gt;
-&lt;/html&gt;
-</pre>
-        <p>To make this <strong>a Bootstrapped template</strong>, just include the appropriate CSS and JS files:</p>
-<pre class="prettyprint linenums">
-&lt;!DOCTYPE html&gt;
-&lt;html&gt;
-&lt;head&gt;
-  &lt;title&gt;Bootstrap 101 Template&lt;/title&gt;
-  &lt;!-- Bootstrap --&gt;
-  &lt;link href="css/bootstrap.min.css" rel="stylesheet" media="screen"&gt;
-&lt;/head&gt;
-&lt;body&gt;
-  &lt;h1&gt;Hello, world!&lt;/h1&gt;
-  &lt;script src="http://code.jquery.com/jquery-latest.js"&gt;&lt;/script&gt;
-  &lt;script src="js/bootstrap.min.js"&gt;&lt;/script&gt;
-&lt;/body&gt;
-&lt;/html&gt;
-</pre>
-        <p><strong>And you're set!</strong> With those two files added, you can begin to develop any site or application with Bootstrap.</p>
-      </section>
+        <section id="contact-us">
+            <div class="page-header">
+                <h1>Contact Us</h1>
+            </div>
+            <div class="row-fluid">
+                <p class="lead">We love to hear from our visitors! If you have a question, please check the <a href="help.html">Help &amp; FAQ</a> page to see if your question has already been answered.</p>
+                <p class="lead">Unfortunately, we can't answer personal medical questions. There may be mistakes on ClinDesk &amp; White Coat Academy &mdash; please
+                        always talk with your doctor about your concerns.</p>
+                <table class="table table-striped">
+                    <tbody>
+                    <tr>
+                        <td>General Questions &amp; Feedback</td>
+                        <td><a href="mailto:team@clindesk.org">team@clindesk.org</a></td>
+                    </tr>
+                    <tr>
+                        <td>Media &amp; PR Inquiries</td>
+                        <td><a href="mailto:media@clindesk.org">media@clindesk.org</a></td>
+                    </tr>
+                    <tr>
+                        <td>Legal Inquiries &amp; DMCA Notificant</td>
+                        <td><a href="mailto:legal@clindesk.org">legal@clindesk.org</a></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
 
     </div>
   </div>
 
 </div>
-
-
-        {#
-
-
-          <div class="row-fluid">
-
-              <div class="span12">
-                <div class="row-fluid">
-                  <div class="innerSpacer">
-                    <h1 id="team">Meet the Team</h1>
-
-                      
-                      <h1 id="governance">Non-Profit Governance</h1>
-                     <div class="row-fluid">
-
-
-                         <!--tabs-->
-
-                           <div class="span8">
-                             <ul class="nav nav-tabs">
-                               <li class="active"><a href="#home" data-toggle="tab">Overview</a></li>
-                               <li><a href="#docs-state" data-toggle="tab">State Filings</a></li>
-                               <li><a href="#docs-federal" data-toggle="tab">Federal Filings</a></li>
-                               <li><a href="#docs-internal" data-toggle="tab">Policies &amp; Bylaws</a></li>
-                             </ul>
-
-                             <div class="tab-content">
-                               <div class="tab-pane active" id="home">
-                                   <p>At ClinDesk and White Coat Academy, we try to be as transparent as possible with our finances and governance
-                                   (in the hopes that you'll <a href="donate.html">donate</a> to help keep us going!).</p>
-                               <p>You can see some of our documents listed in the above tabs. Over the next year, we'll expand these listings as we grow.</p>
-                               <p>Some documents &mdash; such as the IRS 990 &mdash; won't be available until the next fiscal year, since we're just geting off the ground.</p></div>
-                               <div class="tab-pane" id="docs-state">
-                                   We are a non-profit corporation, incorporated in the State of Missouri. You can access our corporate documents through the Secretary of State's <a href="http://www.sos.mo.gov/business/" target="_blank">Business Services</a> site.
-                               <br/><br/><ul><li><a href="https://www.sos.mo.gov/BusinessEntity/soskb/Corp.asp?3353789" target="_blank">ClinDesk Registration &amp; Filings</a> (Charter #N01234644)</li>
-                               <li><a href="https://www.sos.mo.gov/BusinessEntity/soskb/Corp.asp?3353954" target="_blank">White Coat Academy Name Registration</a> (Charter #X01234744)</li></ul>
-                               </div>
-                               <div class="tab-pane" id="docs-federal">Our federal filings for tax-exempt status are currently pending. We will update this site with documents when we know more!<br/><br/>
-                               If you need our EIN (or other data, such as our DUNS number), please e-mail us at <a href="mailto:legal@clindesk.org">legal@clindesk.org</a>.</div>
-                               <div class="tab-pane" id="docs-internal">We make an effort to publicize our bylaws, conflict of interest policy, and other documents regarding our corporate governance.
-                               <br/><br/><ul>
-                                   <li>Corporate Bylaws (Coming soon)</li>
-                                   <li>Conflict of Interest Policy (Coming soon)</li>
-				   <li>Copyright and Intellectual Property (Coming soon)</li>
-                               </ul></div>
-                             </div>
-                            </div>
-                           <!--end tabs-->
-
-                     </div>
-
-
-                      <h1 id="contact">Contact Us</h1>
-                     <div class="row-fluid">
-                       <p>We love to hear from our visitors! If you have a question, please check the <a href="help.html">Help &amp; FAQ</a> page to see if your question has already been answered.</p>
-		       <p>Unfortunately, we can't answer personal medical questions. ClinDesk &amp; White Coat Academy should be used for reference only.</p>
-                         <div class="span8"><table class="table table-striped">
-                                                 <tbody>
-                                                   <tr>
-                                                     <td>General Questions &amp; Feedback</td>
-                                                     <td><a href="mailto:team@clindesk.org">team@clindesk.org</a></td>
-                                                   </tr>
-                                                   <tr>
-                                                     <td>Media &amp; PR Inquiries</td>
-                                                     <td><a href="mailto:media@clindesk.org">media@clindesk.org</a></td>
-                                                   </tr>
-                                                   <tr>
-                                                     <td>Legal Inquiries &amp; DMCA Notificant</td>
-                                                     <td><a href="mailto:legal@clindesk.org">legal@clindesk.org</a></td>
-                                                   </tr>
-                             </tbody></table></div>
-                     </div>
-
-                     #}
-
 {% endblock %}
